Lab11 16/App5/app5-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app5-deploy
spec:
  selector:
    matchLabels:
      app: app5
      version: v1
  template:
    metadata:
      labels:
        app: app5
        version: v1
    spec:
      containers:
      - name: app5
        image: nginx
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        volumeMounts:
        - name:  app5-volume
          mountPath:  /usr/share/nginx/html
      volumes:
      - name:  app5-volume
        configMap:
          name: app5-configmap
