Lab11 16/App5/app5-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app5-svc
spec:
  selector:
    app: app5
  ports:
  - name: http-default
    port: 80
