Lab11 16/App5/app5-destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: app5-destinationrules
spec:
  host: app5-svc.default.svc.cluster.local
  subsets:
  - name: app5-v1-subset
    labels:
      app: app5
      version: v1
